remove tombstone graphic

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -42,12 +42,11 @@
     "\n",
     "DOIs for AOP data products for a given RELEASE will be `tombstoned` prior to each subsequent Release. These tombstoned data can be thought of as being \"out of print\": the DOI for each data product release is still valid, but the version of the data that the DOI referred to is no longer available for download. A DOI that has been tombstoned will resolve to the data product release's webpage which explains that the released version of the product is no longer available for download (e.g. <a href=\"https://data.neonscience.org/data-products/DP3.30015.001/RELEASE-2023\" target=\"_blank\">Ecosystem structure RELEASE-2023</a>, also shown in the figure below). \n",
     "\n",
-    "<table><tr>\n",
-    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_tombstoned_aop_chm_screenshot.png\" width=\"350\"> </td>\n",
-    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_aop_tombstone.png\" width=\"350\"> </td>\n",
-    "</table>\n",
-    "<figcaption>AOP Data RELEASE-2023 Tombstone Page and Graphic (tombstone mock-up generated with <a href=\"https://mpaulweeks.github.io/tombstone/\" target=\"_blank\">https://mpaulweeks.github.io/tombstone/</a>)</figcaption>\n",
-    "\n",
+    "<figure>\n",
+    "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_tombstoned_aop_chm_screenshot.png\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_tombstoned_aop_chm_screenshot.png\"></a>\n",
+    "    <figcaption>AOP Data RELEASE-2023 Tombstone Page</figcaption>\n",
+    "</figure>\n",
     "\n",
     "Prior to each annual NEON Release, AOP scientists review the existing data and reprocess data if any issues are identified. Then they begin an approximately month-long transition period of replacing older files with newer ones. During this period, the current data release tag may no longer point to the same exact files for certain AOP data products that are undergoing updates. Although the data portal or API may indicate availability of a data product at specific sites for specific months, some files may be unavailable for few days (or longer) before being replaced by updated versions.\n",
     "\n",
