fix caption for tombstone page

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -45,7 +45,7 @@
     "<figure>\n",
     "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_tombstoned_aop_chm_screenshot.png\">\n",
     "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_tombstoned_aop_chm_screenshot.png\"></a>\n",
-    "    <figcaption>AOP Data RELEASE-2023 Tombstone Page</figcaption>\n",
+    "    <figcaption>AOP Ecosystem Structure Data RELEASE-2023 Tombstone Page</figcaption>\n",
     "</figure>\n",
     "\n",
     "Prior to each annual NEON Release, AOP scientists review the existing data and reprocess data if any issues are identified. Then they begin an approximately month-long transition period of replacing older files with newer ones. During this period, the current data release tag may no longer point to the same exact files for certain AOP data products that are undergoing updates. Although the data portal or API may indicate availability of a data product at specific sites for specific months, some files may be unavailable for few days (or longer) before being replaced by updated versions.\n",
