add link to contact us form

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "Prior to each annual NEON Release, AOP scientists review the existing data and reprocess data if any issues are identified. Then they begin an approximately month-long transition period of replacing older files with newer ones. During this period, the current data release tag may no longer point to the same exact files for certain AOP data products that are undergoing updates. Although the data portal or API may indicate availability of a data product at specific sites for specific months, some files may be unavailable for few days (or longer) before being replaced by updated versions.\n",
     "\n",
-    "NEON will publish a Data Notification indicating when AOP is transitioning between one Release and the next (e.g.,  <a href=\"https://www.neonscience.org/impact/observatory-blog/aop-data-availability-notification-release-2024\" target=\"_blank\">AOP Data Availability Notification – Release 2024</a>). We suggest holding off on downloading AOP data during this interim period if it is not urgent, or submitting a request through the NEON Contact Us form to obtain information about the status of the data product(s) you are interested in. \n",
+    "NEON will publish a Data Notification indicating when AOP is transitioning between one Release and the next (e.g., <a href=\"https://www.neonscience.org/impact/observatory-blog/aop-data-availability-notification-release-2024\" target=\"_blank\">AOP Data Availability Notification – Release 2024</a>). We suggest holding off on downloading AOP data during this interim period if it is not urgent, or submitting an inquiry through the <a href=\"https://www.neonscience.org/about/contact-us\" target=\"_blank\">NEON Contact Us Form</a> to obtain information about the status of the data products, sites, and years that you are interested in. \n",
     "\n",
     "## How can I tell if the AOP data I've downloaded is up to date?\n",
     "\n",
@@ -961,7 +961,7 @@
     "### Provisional Data\n",
     "- Provisional data may be updated at any time and therefore do not have a static DOI. These data can still be (and should be) cited.\n",
     "- There is typically a 1-year lag period before newly published AOP data are released (so data collected in 2024 would not be available in a release until early 2026). This lag period may be longer in some cases, for example if AOP is providing a major algorithm update (such as reflectance data processed with BRDF and topographic corrections; these were first published in 2024 are remaining provisional through 2026).\n",
-    "- Provisional does not equal problematic! Most data published provisionally are still valid and, pending data review, will become released with no changes. Refer to issue logs to understand if a given data product has any known issues.\n",
+    "- Provisional does not mean problematic! Most data published provisionally are high-quality and, pending data review, will become released after the lag period with no changes. Refer to issue logs to understand if a given data product has any known issues.\n",
     "- For AOP data, whether you are using released or provisional data, if you need your results to be fully reproducible, you will need to archive the AOP data that you used. See the Large Data Packages section on the <a href=\"https://www.neonscience.org/data-samples/guidelines-policies/publishing-research-outputs\" target=\"_blank\">Publishing Research Outputs</a> page for suggestions about archiving large datasets.\n",
     "\n",
     "## AOP Best Practices\n",
