update release transition section

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -965,7 +965,10 @@
     "- For AOP data, whether you are using released or provisional data, if you need your results to be fully reproducible, you will need to archive the AOP data that you used. See the Large Data Packages section on the <a href=\"https://www.neonscience.org/data-samples/guidelines-policies/publishing-research-outputs\" target=\"_blank\">Publishing Research Outputs</a> page for suggestions about archiving large datasets.\n",
     "\n",
     "### Release Transitions\n",
-    "- There is an up to 2 month interim period for AOP in December and January each year between data releases. Check the Data Portal notifications and alerts in December and January before downloading AOP data to make sure your data downloads are not affected by this transition. The previous years' release citation should not be used during this time, instead use the PROVISIONAL citations. If you can, wait to download AOP data until the next release becomes available.\n",
+    "- There is an up to 6-week interim period for AOP in December and January each year between data releases. Check the Data Portal notifications and alerts in December and January before downloading AOP data to make sure your data downloads are not affected by this transition.\n",
+    "- If you can, wait to download AOP data until the next release becomes available.\n",
+    "- The previous year's release citation should not be used for data downloaded during this interim period, instead use the PROVISIONAL citations.\n",
+    "\n",
     "\n",
     "## AOP Best Practices\n",
     "\n",
