--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -521,7 +521,7 @@
    "id": "927aaa12-ada6-4f3f-b76f-866aa36588d8",
    "metadata": {},
    "source": [
-    "We can see that we've downloaded some files in subfolders under the `C:\\NEON_Data\\DP3.30015.001` folder. The provisional data are stored in a provisional \"bucket\" (or storage path) called `neon-aop-provisional-products` and the full path of the data as it is stored on cloud storage is preserved in order to maintain organization. This is helpful if you are working with multiple data products, sites, and/or years of data. Note that there is an `L3\\DiscreteLidar\\CanopyHeightModelGtif`folder - this contains the Level 3 (L3) geotiff files (or .tif tiles), and there is also a `Metadata\\DiscreteLidar` folder, which contains the subfolders called `Reports` and `TileBoundary`. The reports are informational documents (in pdf or html format) summarizing the processing parameters and useful quality information. The `TileBoundary` folder contains shapefiles and kml files that provide useful information about the extent of the data. Please explore the data more on your own!\n",
+    "We can see that we've downloaded some files in subfolders under the `C:\\NEON_Data\\DP3.30015.001` folder. The provisional data are stored in a provisional \"bucket\" (or cloud storage path) called `neon-aop-provisional-products` and the full path of the data as it is stored on cloud storage is preserved in order to maintain organization. This is helpful if you are working with multiple data products, sites, and/or years of data. Note that there is an `L3\\DiscreteLidar\\CanopyHeightModelGtif`folder - this contains the Level 3 (L3) geotiff files (or .tif tiles), and there is also a `Metadata\\DiscreteLidar` folder, which contains the subfolders called `Reports` and `TileBoundary`. The reports are informational documents (in pdf or html format) summarizing the processing parameters and useful quality information. The `TileBoundary` folder contains shapefiles and kml files that provide useful information about the extent of the data. Please explore the data more on your own!\n",
     "\n",
     "Before continuing, let's take a quick look at the files `citation_DP3.30015.001_PROVISIONAL.txt` and `issueLog_DP3.30015.001.csv` that were downloaded in the `C:\\NEON_Data\\DP3.30015.001` folder."
    ]
@@ -960,15 +960,14 @@
     "\n",
     "### Provisional Data\n",
     "- Provisional data may be updated at any time and therefore do not have a static DOI. These data can still be (and should be) cited.\n",
-    "- There is typically a 1-year lag period before newly published AOP data are released (so data collected in 2024 would not be available in a release until early 2026). This lag period may be longer in some cases, for example if AOP is providing a major algorithm update (such as reflectance data processed with BRDF and topographic corrections; these were first published in 2024 are remaining provisional through 2026).\n",
-    "- Provisional does not mean problematic! Most data published provisionally are high-quality and, pending data review, will become released after the lag period with no changes. Refer to issue logs to understand if a given data product has any known issues.\n",
+    "- There is typically a 1-year lag period before newly published AOP data are released (so data collected in 2024 would not be available in a release until early 2026). This lag period may be longer in some cases, for example if AOP is providing a major algorithm update (such as reflectance data processed with BRDF and topographic corrections; these were first published in 2024 and are remaining provisional through 2026).\n",
+    "- Provisional does not necessarily mean problematic! Most data published provisionally are high-quality and, pending data review, will become released after the lag period with no changes. Refer to issue logs to understand if a given data product has any known issues.\n",
     "- For AOP data, whether you are using released or provisional data, if you need your results to be fully reproducible, you will need to archive the AOP data that you used. See the Large Data Packages section on the <a href=\"https://www.neonscience.org/data-samples/guidelines-policies/publishing-research-outputs\" target=\"_blank\">Publishing Research Outputs</a> page for suggestions about archiving large datasets.\n",
     "\n",
     "### Release Transitions\n",
     "- There is an up to 6-week interim period for AOP in December and January each year between data releases. Check the Data Portal notifications and alerts in December and January before downloading AOP data to make sure your data downloads are not affected by this transition.\n",
     "- If you can, wait to download AOP data until the next release becomes available.\n",
     "- The previous year's release citation should not be used for data downloaded during this interim period, instead use the PROVISIONAL citations.\n",
-    "\n",
     "\n",
     "## AOP Best Practices\n",
     "\n",
